--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
+
+    <!-- SubscriberFragment -->
     <string name="app_name">My Subscribers App</string>
+    <string name="subscriber_name_hint">Subscriber\'s name</string>
+    <string name="subscriber_email_hint">E-mail</string>
+    <string name="subscriber_button">Add</string>
+    <string name="subscriber_title">Subscriber</string>
 </resources>
