--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="subscriber_inserted_successfully">Subscriber was sucessfully inserted</string>
     <string name="subscriber_error_to_insert">There was an error when inserting Subscriber</string>
     <string name="add_button">add button</string>
+    <string name="subscribers">Subscribers</string>
 </resources>
