realizada Operação de UPDATE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="subscriber_error_to_insert">There was an error when inserting Subscriber</string>
     <string name="add_button">add button</string>
     <string name="subscribers">Subscribers</string>
+    <string name="subscriber_button_update">Update</string>
+    <string name="subscriber_update_sucessfully">Update Sucessfull</string>
 </resources>
