--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,14 @@
     <string name="subscriber_email_hint">E-mail</string>
     <string name="subscriber_button">Add</string>
     <string name="subscriber_title">Subscriber</string>
-    <string name="subscriber_inserted_successfully">Subscriber was sucessfully inserted</string>
+    <string name="subscriber_inserted_successfully">Subscriber was successfully inserted</string>
     <string name="subscriber_error_to_insert">There was an error when inserting Subscriber</string>
     <string name="add_button">add button</string>
     <string name="subscribers">Subscribers</string>
     <string name="subscriber_button_update">Update</string>
-    <string name="subscriber_update_sucessfully">Update Sucessfull</string>
+    <string name="subscriber_update_successfully">Subscriber was successfully Updated</string>
+    <string name="subscriber_button_delete">Delete</string>
+    <string name="subscriber_deleted_successfully">Subscriber was successfully deleted</string>
+    <string name="subscriber_error_to_delete">There was an error when Deleting Subscriber</string>
+    <string name="subscriber_error_to_update">There was an error when Updating Subscriber</string>
 </resources>
